<resources>
    <string name="app_name">Faircorp</string>
    <string name="app_logo_description">Faircorp logo</string>

    <string name="act_main_windowname_hint">Window name</string>
    <string name="act_main_heatername_hint">Heater name</string>
    <string name="act_main_welcome">Welcome on faircorp,\n the app to manage building windows</string>
    <string name="act_main_open_window">Open window</string>

    <string name="menu_windows">Windows</string>
    <string name="menu_website">Our website</string>
    <string name="menu_email">Send us an email</string>
    <string name="menu_heaters">Heaters</string>
    <string name="menu_rooms">Rooms</string>
    <string name="menu_buildings">Buildings</string>

    <string name="title_activity_basic">BasicActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="act_window_name">Window name</string>
    <string name="act_window_room">Room</string>
    <string name="act_window_room_target_temp">Target room temperature</string>
    <string name="act_window_room_current_temp">Current room temperature</string>
    <string name="act_window_status">Status</string>

    <string name="act_heater_power">Power</string>

    <string name="act_room_name">Room name</string>
    <string name="act_room_building">Building</string>
    <string name="act_room_current_temp">Current temperature</string>
    <string name="act_room_target_temp">Target temperature</string>
    <string name="act_room_floor">Floor</string>

    <string name="act_building_name">Building name</string>
    <string name="act_building_outside_temp">Outside temperature</string>


    <string name="act_button_window_delete">Delete Window</string>
    <string name="act_button_window_switch">Switch Window</string>
    <string name="act_button_window_create">Create Window</string>
    <string name="act_button_heater_delete">Delete Heater</string>
    <string name="act_button_heater_switch">Switch Heater</string>
    <string name="act_button_heater_create">Create Heater</string>
    <string name="act_button_room_delete">Delete Room</string>
    <string name="act_button_room_create">Create Room</string>
    <string name="act_button_building_delete">Delete Building</string>
    <string name="act_button_building_create">Create Building</string>

    <string name="act_list_windows">Windows List</string>
    <string name="act_list_heaters">Heaters List</string>
    <string name="act_list_rooms">Rooms List</string>
</resources>